theme/static/css/main.css
/* ... */
@media only screen and (min-width: 37.5em) {
    .related-articles {
    display: inline;
    float: left;
    width: 50%;
    margin-left: 25%;
    margin-right: 25%}
}@media only screen and (min-width: 86.375em) {
    .related-articles {
    display: inline;
    float: left;
    width: 37.5%;
    margin-left: 33.33333%;
    margin-right: 29.16667%}
}.related-articles h4 {
    text-transform: uppercase;
    margin-bottom: 0;
}
.related-articles li {
    margin-bottom: 0;
}
.footer-icons li {
    display: inline-block;
    padding-right: 5px;
}
.footer-icons li a {
    color: #9a9a9a;
    -webkit-transition: 0.4s linear;
    -moz-transition: 0.4s linear;
    -ms-transition: 0.4s linear;
    -o-transition: 0.4s linear;
    transition: 0.4s linear;
}
.footer-icons li a:hover {
    text-decoration: none;
    border-bottom: none;
}
.footer-icons li a:hover .icon-twitter, .footer-icons li a:hover .icon-twitter-sign {
    color: #2aa9df;
}
.footer-icons li a:hover .icon-facebook, .footer-icons li a:hover .icon-facebook-sign {
    color: #3a5a98;
}
.footer-icons li a:hover .icon-instagram, .footer-icons li a:hover .icon-instagram-sign {
    color: #306088;
}
.footer-icons li a:hover .icon-google-plus, .footer-icons li a:hover .icon-google-plus-sign {
    color: #b63324;
}
.footer-icons li a:hover .icon-lastfm, .footer-icons li a:hover .icon-lastfm-sign {
    color: #d80049;
}
.footer-icons li a:hover .icon-github {
    color: #4183c4;
}
.browser-upgrade {
    background: #000;
    text-align: center;
    margin: 0 0 2em 0;
    padding: 10px;
    text-align: center;
    color: #fff;
}
.browser-upgrade a {
    color: #fff;
    border-bottom: 1px dotted #fff;
    text-decoration: none;
}
.browser-upgrade a:hover {
    border-bottom: 1px solid #fff;
}
#goog-fixurl ul {
    list-style: none;
    margin-left: 0;
    padding-left: 0;
}
#goog-fixurl ul li {
    list-style-type: none;
}
#goog-wm-qt {
    width: auto;
    margin-right: 10px;
    margin-bottom: 20px;
    padding: 8px 20px;
    display: inline-block;
    font-size: 14px;
    font-size: 0.875rem;
    background-color: #fff;
    color: #111;
    border-width: 2px !important;
    border-style: solid !important;
    border-color: #919191;
    border-radius: 3px;
}

/* Custom post-SASS changes */
p a, .hilite {
 color: #da553b !important;
 text-decoration: none !important;
}

h3 small {
    color: #da553b !important; 
    font-size: 0.6em;
}

#main li {
    margin-bottom:0.2rem;
}

.rrp {
    text-decoration:line-through;
    color: red;
}

.price {
    color: #000;
    font-weight:bold;
    font-size: 1.1rem;
}

.article-image {
    width: 100%;    
}

@media only screen and (min-width: 37.5em) {
    .article-with-image {
        margin-left: 4.875rem;
        margin-right: 4.875rem;
    }
}


.byline {
    clear: both;
    font-size: 80%;
    margin-bottom: 0.625rem;
    }
    
.post .byline {
    margin-top: -1rem;
    margin-bottom: 1.625rem;
}
    
    
article > h3 {
    margin-bottom: 0.625rem;
}
 
img.center {
    display: block;
    margin: 1.625rem auto;
}   

img.smaller {
    max-width: 200px;
}


img.small {
    max-width: 300px;
}

img.medium {
    max-width: 400px;
}

img.large {
    max-width: 600px;
}

.image-container {
    margin: 1.625rem auto;
    text-align:center;
    max-width:625px;
    font-size: 0; /* Hide spacing */
}

.image-container img {
    margin: 0.15625rem;
}

#site-nav li.active a {
    color: #da553b;
}

.ps {
    border-top: 1px solid #da553b;
    border-bottom: 1px solid #da553b;
    
    margin: 1.625rem 0;
    padding: 0.625rem 0;
    
}
.ps a {
    color: #da553b;
}

